sinatra basic forms complete

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,9 +1,10 @@
-<!-- <h2><%= "Puppy Name:\n#{@display.name}" %></h2> -->
+<h2><%= "Puppy Name:\n#{@display.name}" %></h2>
 
 <h2>Puppy Name: <%= @display.name %></h2>
 <h2>Puppy Breed: <%= @display.breed %></h2>
 <h2>Puppy Age: <%= @display.age %></h2>
 
-<!-- <h2>Puppy Name: <%= @name %></h2>
-<h2>Puppy Breed: <%= @breed %></h2>
-<h2>Puppy Age: <%= @age %></h2> -->
+
+<!-- <h2><%= "Puppy Name:\n#{@display.name}" %></h2>
+<h2><%= "Puppy Breed:\n#{@display.breed}" %></h2>
+<h2><%= "Puppy Age:\n#{@display.age}" %></h2> -->
