automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -4,6 +4,8 @@
 <h2>Puppy Breed: <%= @display.breed %></h2>
 <h2>Puppy Age: <%= @display.age %></h2>
 
+<h1><%= @display.jump %></h1>
+
 
 <!-- <h2><%= "Puppy Name:\n#{@display.name}" %></h2>
 <h2><%= "Puppy Breed:\n#{@display.breed}" %></h2>
