automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,4 +1,4 @@
-<h2><%= "Puppy Name:\n#{@display.name}" %></h2>
+<!-- <h2><%= "Puppy Name:\n#{@display.name}" %></h2> -->
 
 <h2>Puppy Name: <%= @display.name %></h2>
 <h2>Puppy Breed: <%= @display.breed %></h2>
