automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -4,7 +4,7 @@
 <h2>Puppy Breed: <%= @display.breed %></h2>
 <h2>Puppy Age: <%= @display.age %></h2>
 
-<h1><%= @display.jump %></h1>
+<h1><%= @display.jump(@name) %></h1>
 
 
 <!-- <h2><%= "Puppy Name:\n#{@display.name}" %></h2>
